2013-03-06  Alan Mackenzie  <acm@muc.de>

	Correct the position of point in some line-up functions.
	* progmodes/cc-align.el (c-lineup-whitesmith-in-block)
	(c-lineup-assignments, c-lineup-gcc-asm-reg ): take position of
	point at column 0 rather than at a random place in the line.

2013-03-05  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-compat.el (tramp-compat-delete-directory): Implement
	TRASH argument.

2013-03-05  Dmitry Gutov  <dgutov@yandex.ru>

	Keep pre-existing highlighting in completion candidates (Bug#13250).
	* minibuffer.el (completions-first-difference): State that the
	face is "added" in the docstring.
	(completions-common-part): Same.  And don't inherit from default.
	(completion-hilit-commonality): Prepend 'completions-common-part
	and 'completion-first-difference faces to the 'face property,
	instead of replacing the value(s).
	(completion--insert-strings): Same with 'completions-annotations face.
	(completion-hilit-commonality): Use 'face instead of
	'font-lock-face, because it gets priority if the completion
	strings already have 'face set.

2013-03-04  Alan Mackenzie  <acm@muc.de>

	Replace `last-command-event' by `last-command-char' in XEmacs.
	* progmodes/cc-defs.el (c-last-command-char): New macro.
	* progmodes/cc-align.el (c-semi&comma-inside-parenlist)
	(c-semi&comma-no-newlines-before-nonblanks)
	(c-semi&comma-no-newlines-for-oneline-inliners): Use the new macro
	in place of `last-command-event'.
	* progmodes/cc-cmds.el (c-electric-pound, c-electric-brace)
	(c-electric-slash, c-electric-semi&comma, c-electric-lt-gt)
	(c-electric-paren, c-electric-continued-statement): Use the new
	macro in place of `last-command-event'.

2013-03-04  Glenn Morris  <rgm@gnu.org>

	* files.el (inhibit-local-variables-regexps):
	Add .diff and .patch.  (Bug#13862)

2013-03-03  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-adb.el (tramp-adb-maybe-open-connection): Cache,
	whether the "su" command is available on the device.
